--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,34 @@
-# Core dependencies
+# Web frameworks
 Flask
 Flask-CORS
+
+# Streamlit app
 streamlit
+
+# Environment & config
 python-dotenv
 
-# Google API dependencies
+# Google APIs
 google-api-python-client
 google-auth
 google-auth-httplib2
 google-auth-oauthlib
 google-generativeai
 
-# Instagram scraping
+# Instagram scraping (instaloader)
 instaloader
 
-# Data processing
+# Data handling
 pandas
 numpy
 
-# File handling
+# Excel file support
 openpyxl
 xlsxwriter
 
-# HTTP requests
+# HTTP clients
 requests
 httpx
 
-# Other utilities
+# Utils
 tqdm
